--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,48 +1,46 @@
-<!DOCTYPE html>
-<html>
+<!--<%&#45;&#45;-->
+<!--Created by IntelliJ IDEA.-->
+<!--User: cotarius-->
+<!--Date: 30.04.2024-->
+<!--Time: 12:32-->
+<!--To change this template use File | Settings | File Templates.-->
+<!--&#45;&#45;%>-->
+<!--<%@ page contentType="text/html;charset=UTF-8" language="java" %>-->
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Spring Security 6 + Thymeleaf Demo</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <title>Title</title>
 </head>
-
 <body>
-<!-- create navigation bar ( header) -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span> <span class="icon-bar">
-                    </span>
-            </button>
-            <a class="navbar-brand">
-                Registration and Login with Spring Boot 3 + Spring Security 6 + Thymeleaf</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li sec:authorize="isAuthenticated()">
-                    <a href="javascript: document.logoutForm.submit()" class="dropdown-toggle">Sign out</a>
-                    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
-                        <input hidden type="submit" value="Sign Out" />
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div align="center">
+    <h2>Reminder Manager</h2>
+    <form method="get" action="search">
+        <input type="text" name="keyword"/>
+        <input type="submit" value="Search"/>
+    </form>
+    <h3><a href="/remind/new">New Remind</a></h3>
+    <table border="1" cellpadding="5">
+        <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>DateTime</th>
+        </tr>
+        <tr th:each="remind: ${reminds}">
+            <td th:text="${remind.id}"></td>
+            <td th:text="${remind.getTitle()}"></td>
+            <td th:text="${remind.getDescription()}"></td>
+            <td th:text="${remind.getRemind()}"></td>
+            <td>
+                <a href="/edit/{id} + ${remind.id}">Edit</a>
 
-<br><br><br><br>
-<div class="container">
-    <div class="alert alert-success">
-        Hello <strong><span sec:authentication="principal.username"></span></strong>
-        Login Successful.
-    </div>
+                <a href="/delete?id=${remind.id}">Delete</a>
+            </td>
+        </tr>
+
+    </table>
 </div>
-<input type="hidden" th:name="${_csrf.parameterName}"
-       th:value="${_csrf.token}" />
 </body>
 </html>
