--- a/src/main/resources/templates/edit-remind.html
+++ b/src/main/resources/templates/edit-remind.html
@@ -8,7 +8,8 @@
 <body>
 <div align="center">
     <h2>Edit Remind</h2>
-    <form action="#" th:action="@{/save}" th:object="${reminder}" method="post">
+    <!--    <form action="#" th:action="@{/save}" th:object="${reminder}" method="post">-->
+    <form action="#" th:action="@{/edit/{remindId}(remindId=${reminder.id})}" th:object="${reminder}" method="post">
         <p>Id: <label>
             <td th:text="${reminder.getId()}"></td>
         </label></p>
