--- a/src/main/resources/templates/new_remind.html
+++ b/src/main/resources/templates/new_remind.html
@@ -16,7 +16,7 @@
             <input type="text" th:field="*{description}" />
         </label></p>
         <p>Remind date: <label>
-            <input type="text" th:field="*{remind}" />
+            <input type="datetime-local" th:field="*{remind}" />
         </label></p>
         <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
     </form>
