some job with html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,6 +67,9 @@
                         </div>
                     </div>
                 </div>
+
+                <a href="registration.html">Registration</a>
+
             </form>
         </div>
     </div>
