--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,5 +41,23 @@
 
     </table>
 </div>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li sec:authorize="isAuthenticated()">
+                    <a href="javascript: document.logoutForm.submit()" class="dropdown-toggle">Sign out</a>
+                    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+                        <input hidden type="submit" value="Sign Out" />
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!--<br>-->
+
 </body>
 </html>
