--- a/src/main/resources/templates/deprecated-login.html
+++ b/src/main/resources/templates/deprecated-login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -11,13 +12,13 @@
 
 <body>
 <div class="login-page">
-    <form action="#" class="login-form">
+    <form class="login-form" th:action="@{/login}" method="post">
         <h2>Login</h2>
         <div class="input-box">
-            <input type="text" id="username" placeholder="Username" required>
+            <input type="text" id="login-username" placeholder="Username" required>
         </div>
         <div class="input-box">
-            <input type="password" id="password" placeholder="password" required>
+            <input type="password" id="login-password" placeholder="password" required>
         </div>
         <button type="submit">Login</button>
 
@@ -27,13 +28,13 @@
     <form action="#" class="registration-form">
         <h2>New Registration</h2>
         <div class="input-box">
-            <input type="text" id="username" placeholder="Username" required>
+            <input type="text" id="register-username" placeholder="Username" required>
         </div>
         <div class="input-box">
             <input type="email" id="email" placeholder="email" required>
         </div>
         <div class="input-box">
-            <input type="password" id="password" placeholder="password" required>
+            <input type="password" id="register-password" placeholder="password" required>
         </div>
         <button type="submit">Register</button>
 
