--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <a href="registration.html">Registration</a>
+                <a href="/registration">Registration</a>
 
             </form>
         </div>
